TestCases/Errors/range_value/observations/spr_05_obs.spm
 obs   6-9   0.00333333333333333 
 obs   4-14   0.00641025641025641 
 obs   5-14   0.00891025641025641 
 obs   4-15   0.0117307692307692 
 obs   5-15   0.00615384615384615 
 error_value   6-9   0 
 error_value   4-14   0 
 error_value   5-14   0 
 error_value   4-15   0 
 error_value   5-15   0 
